syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "ContextAssociationType";


message ContextAssociation {
  enum ContextAssociationEnum {
    NO = 0;
    PRE = 1;
    ASSOC = 2;
    DIS = 3;
  }
  ContextAssociationEnum type = 1;
}
